# CameraPlacement

./: CLAUDE.md  main.py  pyproject.toml
.claude/: settings.local.json
docs/: REVIEW_CRITERIA.md  TECH_STACK.md  plan.md
docs/F01-room-model/: design.md  requirements.md
docs/F02-camera-model/: design.md  requirements.md
docs/F03-activity-volume/: design.md  requirements.md
docs/F04-frustum/: design.md  requirements.md
docs/F05-occlusion/: design.md  requirements.md
docs/F06-visibility/: design.md  requirements.md
docs/F07-coverage/: design.md  requirements.md  review.md
docs/F08-angle-score/: design.md  requirements.md
docs/F09-projection-score/: design.md  requirements.md
docs/F10-quality-score/: design.md  requirements.md
docs/F11-visualization/: design.md  requirements.md
docs/F12-placement-patterns/: design.md  requirements.md
docs/F13-placement-comparison/: design.md  requirements.md
docs/F14-objective-function/: design.md  requirements.md
docs/F15-optimizer/: design.md  requirements.md
src/camera_placement/: __init__.py
tests/: test_activity.py  test_angle_score.py  test_camera.py  test_comparison.py  test_coverage.py  test_environment.py  test_evaluator.py  test_frustum.py  test_objective.py  test_occlusion.py  test_optimizer.py  test_patterns.py  test_projection_score.py  test_viewer.py  test_visibility.py
tests/results/: F02_test_result.txt  F03_test_result.txt  F04_test_result.txt  F05_test_result.txt  F06_test_result.txt  F07_test_result.txt  F08_test_result.txt  F09_test_result.txt  F10_test_result.txt  F11_test_result.txt  (+4 more)
(+21 files in other folders)
