[project]
name = "cameraplacement"
version = "0.1.0"
description = "カメラ配置最適化ツール"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "plotly>=6.6.0",
    "scipy>=1.17.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
